# Portfolio

./: README.md
Portfolio/C/: Coffre_fort.c
Portfolio/C++/: test cpp.txt
Portfolio/C++/Jeu de la vie/: CMakeLists.txt  Fichier.cpp  Fichier.h  Fichier.txt  Grille.cpp  Grille.h  Ligne.cpp  Ligne.h  Projet-2.cpp  Projet_2.cpp
Portfolio/HTML/: recette.html
Portfolio/HTML/Projet LeBonPlan/Controler/: CV.php  accueil_ent.php  accueil_etu.php  connexion.js  connexion.php  creer_annonce.js  creer_annonce.php  deconnexion.js  get_role.php  index.php  inscription_ent.js  inscription_ent.php  inscription_etu.js  inscription_etu.php  inscription_pil.js  inscription_pil.php  menu.js  postuler.js  postuler.php  postuler2.js  postuler2.php  profil.php  recherche.js  recherche_etu.php  session.php  traitement_postuler.php  voir_offre.js
Portfolio/HTML/Projet LeBonPlan/Model/: Database.sql
Portfolio/HTML/Projet LeBonPlan/View/: accueil.css  candidature_ent.css  candidature_ent.html  cgu.html  cgu_ent.html  cgu_etu.html  choix_compte_conn.html  choix_compte_insc.css  choix_compte_insc.html  concervation.html  concervation_ent.html  concervation_etu.html  connexion.html  (+47 more)
Portfolio/HTML/page web idées lectures/: Activité 1 PageWebSourceCSS.docx  Activité 1 PageWebSourceHTML.docx  page 2 harry potter.HTML  page 3 deux soeur pour un roi.HTML  page 4 cyrano.HTML  page 5 cherub.HTML  page 6 gardiens des cités perdues.HTML  page principal.html  style.css  style2.css  style3.css  style4.css  style5.css  style6.css
Portfolio/Python/: pendu.py
Portfolio/Python/Résolution d'équation/: Circuit.py
Portfolio/Python/Théorie des ondes/: Modulation.py  Reception.py
Portfolio/SQL/: bdd.txt
